# livekit-realtime

./: .env.example  .env.template  .gitignore  AI_AGENT_CREATOR_GUIDE.md  AUDIO_IMPROVEMENTS_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLI_FIX.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  PRODUCTION_WORKFLOW.md  PROMPT_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  README_FOR_AI.md  TEMPLATE_SYSTEM.md  conversation_workflow_blueprint.md  direct_outbound.py  livekit.toml  outbound-agent-config.md  outbound_call.py  pyproject.toml  requirements.txt  robert-agent-config.md  system_prompt_blueprint.md  trigger_outbound.py  trigger_outbound_agent.py  working_outbound.py
.claude/: settings.local.json
config/: agent.creation.md  agent.template.yaml
docs/: USAGE_GUIDE.md  VoiceAI-quickstart.md  config.md  run.md
docs/agents/: gpt-realtime.md  samuel-agent.md  speech-audio.md  telephony.md  workflows.md
examples/: python.pip.Dockerfile
robert-agent/: .env.example  Makefile  README.md  agent.py  pyproject.toml
robert-agent/config/: robert-agent-config.md
robert-agent/src/agents/: receptionist_agent.py  specialist_agents.py
scripts/: create_agent.py  create_greeting.py  generate_agent.py
sip/: README.md
src/: __init__.py  agent.py  agent_simple.py  agent_template.py  outbound_agent.py
src/agents/: base_agent.py  primary_agent.py  specialist_agent.py
src/tasks/: consent_task.py  information_task.py
src/workflows/: main_workflow.py
templates/examples/: personal_assistant.yaml
templates/prompts/: customer_support.yaml  missed_calls.yaml
(+2 files in other folders)
