[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-phone-agent"
version = "0.1.0"
description = "A real-time voice assistant using LiveKit and OpenAI GPT-Realtime"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents[openai]~=1.2",
    "python-dotenv~=1.0",
    "uvicorn~=0.30"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8"
]